Working network performance comment box scroll and feed comment touch to performance comment box auto-scroll

--- a/ios/LaunchScreen.xib
+++ b/ios/LaunchScreen.xib
@@ -11,8 +11,8 @@
             <rect key="frame" x="0.0" y="0.0" width="613" height="1211"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" image="LaunchImage" highlightedImage="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="EPp-Lh-3ad">
-                    <rect key="frame" x="0.0" y="22" width="768" height="1024"/>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" image="LaunchImage" highlightedImage="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="EPp-Lh-3ad">
+                    <rect key="frame" x="0.0" y="0.0" width="613" height="1211"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
